Fix spacing (#78)

--- a/src/components/PageContainer.module.css
+++ b/src/components/PageContainer.module.css
@@ -6,3 +6,9 @@
   max-inline-size: var(--medium);
   padding-block: var(--spacer);
 }
+
+@media (width >= 45rem) {
+  .container {
+    padding-block: var(--spacer-triple);
+  }
+}
